Overflow home button fix on archive page

--- a/css/style.scss
+++ b/css/style.scss
@@ -195,6 +195,8 @@ header {
       padding: 5px;
       color: $EYA-white !important;
       margin: 0 auto;
+      z-index: 888888;
+      position: relative;
       @include border-radius(20px);
       &:hover {
         background:$EYA-light-blue;
